--- a/Servlet/pom.xml
+++ b/Servlet/pom.xml
@@ -20,6 +20,13 @@
      <version>7.0</version>
      <scope>provided</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
+	<dependency>
+    <groupId>org.primefaces</groupId>
+    <artifactId>primefaces</artifactId>
+    <version>7.0</version>
+	</dependency>
+
 	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 	<dependency>
     <groupId>com.google.code.gson</groupId>
