--- a/Servlet/pom.xml
+++ b/Servlet/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.eci.cvds</groupId>
-  <artifactId>Servlet</artifactId>
+  <artifactId>Servlet2</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Servlet Maven Webapp</name>
+  <name>Servlet2 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -14,37 +14,38 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+	
 	<dependency>
-     <groupId>javax</groupId>
-     <artifactId>javaee-web-api</artifactId>
-     <version>7.0</version>
-     <scope>provided</scope>
+		<groupId>javax</groupId>
+		<artifactId>javaee-web-api</artifactId>
+		<version>7.0</version>
+		<scope>provided</scope>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
-	<dependency>
-    <groupId>org.primefaces</groupId>
-    <artifactId>primefaces</artifactId>
-    <version>7.0</version>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-	<dependency>
-    <groupId>com.google.code.gson</groupId>
-    <artifactId>gson</artifactId>
-    <version>2.8.6</version>
-	</dependency>
+	
+	
+	<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 	<dependency>
 		<groupId>javax</groupId>
 		<artifactId>javaee-api</artifactId>
 		<version>8.0</version>
 		<scope>provided</scope>
 	</dependency>
+	
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
 	<!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
 	<dependency>
 		<groupId>com.sun.faces</groupId>
 		<artifactId>jsf-api</artifactId>
 		<version>2.2.20</version>
 	</dependency>
+	
+	
 	<!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-impl -->
 	<dependency>
 		<groupId>com.sun.faces</groupId>
@@ -57,10 +58,21 @@
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
+	<dependency>
+		<groupId>org.primefaces</groupId>
+		<artifactId>primefaces</artifactId>
+		<version>7.0</version>
+	</dependency>
+	
+	
+	
   </dependencies>
   <build>
-    <finalName>Servlet</finalName>
-	 <plugins>
+  
+
+   <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
@@ -114,5 +126,12 @@
            </configuration>
        </plugin>
    </plugins>
+
+
+
+  
+  
+  
+    <finalName>Servlet2</finalName>
   </build>
 </project>
